# photon

./: .gitignore  meson.build
dfio/: dfio_linux.d  dfio_win.d
dfio/bench/: win64.bat
dfio/bench/static_http/: hello.d
src/: meson.build
src/photon/: package.d
src/photon/ds/: common.d  intrusive_queue.d
src/photon/linux/: core.d  support.d  syscalls.d
tests/: meson.build  ping_pong_full_duplex.d
